[gd_scene load_steps=32 format=2]

[ext_resource path="res://nodes/level_pause.tscn" type="PackedScene" id=1]
[ext_resource path="res://offline_levels/general_scenes/game_over.tscn" type="PackedScene" id=2]
[ext_resource path="res://offline_levels/general_scenes/instructions.tscn" type="PackedScene" id=3]
[ext_resource path="res://offline_levels/level8/manager.gd" type="Script" id=4]
[ext_resource path="res://resources/font/OpenSans-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://resources/offline_mode_Asset/level_8/input_box.png" type="Texture" id=6]
[ext_resource path="res://resources/font/Arcadepix Plus.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://inventory_system/data/resources/settings_data.tres" type="Resource" id=8]
[ext_resource path="res://resources/Themes/instruction.tres" type="Theme" id=9]
[ext_resource path="res://resources/Themes/warning_font.tres" type="DynamicFont" id=10]
[ext_resource path="res://resources/Themes/file_dialog.tres" type="Theme" id=11]
[ext_resource path="res://resources/Game buttons/question_panel.png" type="Texture" id=12]
[ext_resource path="res://resources/offline_mode_Asset/level_8/submit_btn.png" type="Texture" id=13]
[ext_resource path="res://resources/offline_mode_Asset/level_8/20.png" type="Texture" id=14]
[ext_resource path="res://resources/font/OpenSans-Light.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://scenes/others/reset_timer.tscn" type="PackedScene" id=16]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "animation"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="DynamicFont" id=12]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 1, 0.737255, 0.227451, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=8]
size = 150
font_data = ExtResource( 15 )

[sub_resource type="GDScript" id=11]
script/source = "extends Label

export(int) var type
export(String) var answer
"

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 768, 125 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 768, 125 )

[sub_resource type="Theme" id=16]
LineEdit/styles/focus = SubResource( 14 )
LineEdit/styles/normal = SubResource( 15 )

[sub_resource type="DynamicFont" id=9]
size = 80
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 275, 80 )

[sub_resource type="StyleBoxTexture" id=18]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 275, 80 )

[sub_resource type="StyleBoxTexture" id=19]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 275, 80 )
modulate_color = Color( 0.588235, 0.588235, 0.588235, 1 )

[sub_resource type="Theme" id=20]
Button/styles/hover = SubResource( 17 )
Button/styles/normal = SubResource( 18 )
Button/styles/pressed = SubResource( 19 )

[sub_resource type="DynamicFont" id=10]
size = 72
font_data = ExtResource( 15 )

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
user_input = NodePath("HBoxContainer/user_input")
submit = NodePath("submit")
question_label = NodePath("question")
timer = NodePath("Timer")
remaining_time = NodePath("timer_labels/remaining_time")
questionNumber_label = NodePath("counter_labels/question_number")
perQuestion_popup = NodePath("popup_layer/perQuestion_popup")
perQuestion_title = NodePath("popup_layer/perQuestion_popup/main_popup/title")
perQuestion_content = NodePath("popup_layer/perQuestion_popup/main_popup/content")
gameover_popup = NodePath("popup_layer/game_over")
gameover_indicator = NodePath("popup_layer/game_over/main_popup/indicator")
gameover_score = NodePath("popup_layer/game_over/main_popup/score")
gameover_next = NodePath("popup_layer/game_over/main_popup/GridContainer/next")
gameover_retry = NodePath("popup_layer/game_over/main_popup/GridContainer/retry")
score_display = NodePath("score_labels/score")
crowns = NodePath("popup_layer/game_over/main_popup/crowns")
audioplayer = NodePath("popup_layer/game_over/AudioStreamPlayer")
gameover_anim = NodePath("popup_layer/game_over/AnimationPlayer")
celebration = NodePath("popup_layer/game_over/AnimationPlayer/Sprite")
tutorial_player = NodePath("popup_layer/instructions/main_popup/AnimationPlayer")
instruction_sprite = NodePath("popup_layer/instructions/main_popup/AnimationPlayer/level8")
net1_skills = NodePath("popup_layer/game_over/main_popup/net1_skills")
coins = NodePath("popup_layer/game_over/main_popup/GridContainer2/coins")
settings_data = ExtResource( 8 )

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_h_scroll2" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_v_scroll2" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_h_scroll3" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_v_scroll3" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_h_scroll4" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_v_scroll4" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_h_scroll5" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_v_scroll5" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_h_scroll2" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_v_scroll2" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_h_scroll3" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_v_scroll3" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_h_scroll4" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_v_scroll4" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_h_scroll5" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_v_scroll5" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer" type="CanvasLayer" parent="."]

[node name="pause" parent="popup_layer" instance=ExtResource( 1 )]

[node name="game_over" parent="popup_layer" instance=ExtResource( 2 )]
visible = false

[node name="instructions" parent="popup_layer" instance=ExtResource( 3 )]

[node name="content" parent="popup_layer/instructions/main_popup" index="1"]
margin_bottom = 30.0
rect_min_size = Vector2( 900, 230 )
text = "In this game, you'll be presented with a series of 8-bit binary numbers or decimal numbers. Your task is to convert each binary number into its decimal equivalent or vice versa. Type your answer in the provided box and click \"Submit.\" If your answer is correct, you'll earn points and move on to the next number. But be quick â€“ the clock is ticking!"

[node name="AnimationPlayer" parent="popup_layer/instructions/main_popup" index="2"]
playback_speed = 0.25
anims/RESET = SubResource( 6 )
anims/animation = SubResource( 7 )

[node name="Sprite" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="0"]
visible = false

[node name="level3" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="1"]
visible = false

[node name="level4" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="2"]
visible = false

[node name="level5" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="3"]
visible = false

[node name="level7" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="4"]
visible = false

[node name="level6" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="6"]
visible = false

[node name="level2" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="7"]
visible = false

[node name="perQuestion_popup" type="Control" parent="popup_layer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="popup_layer/perQuestion_popup"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 666, 375 )
color = Color( 0, 0, 0, 0.588235 )

[node name="command" type="Label" parent="popup_layer/perQuestion_popup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -330.0
margin_right = 250.0
margin_bottom = -270.0
rect_min_size = Vector2( 500, 60 )
custom_fonts/font = SubResource( 12 )
text = "(Tap to Continue)"
align = 1
valign = 1
autowrap = true

[node name="main_popup" type="Panel" parent="popup_layer/perQuestion_popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -550.0
margin_top = -187.5
margin_right = 550.0
margin_bottom = 187.5
rect_min_size = Vector2( 1100, 375 )
custom_styles/panel = SubResource( 13 )

[node name="TextureRect" type="TextureRect" parent="popup_layer/perQuestion_popup/main_popup"]
margin_left = -6.0
margin_top = -20.5
margin_right = 290.0
margin_bottom = 205.5
rect_scale = Vector2( 3.76638, 1.91973 )
texture = ExtResource( 12 )

[node name="title" type="Label" parent="popup_layer/perQuestion_popup/main_popup"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -348.0
margin_top = -7.5
margin_right = 352.0
margin_bottom = 82.5
rect_min_size = Vector2( 700, 80 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
text = "RESULT"
align = 1
valign = 1
autowrap = true

[node name="content" type="Label" parent="popup_layer/perQuestion_popup/main_popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -531.0
margin_top = -68.5
margin_right = 522.0
margin_bottom = 178.5
rect_min_size = Vector2( 900, 150 )
theme = ExtResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Gained Score: "
align = 1
valign = 1
autowrap = true

[node name="tap" type="Button" parent="popup_layer/perQuestion_popup"]
self_modulate = Color( 1, 1, 1, 0.0980392 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = 2.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1921.0
margin_bottom = 1083.0
color = Color( 0, 0, 0, 1 )

[node name="bg" type="NinePatchRect" parent="."]
margin_right = 1920.0
margin_bottom = 1078.0
texture = ExtResource( 14 )

[node name="question" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -344.0
margin_top = -191.5
margin_right = 344.0
margin_bottom = 13.5
custom_fonts/font = SubResource( 8 )
text = "11011010"
align = 1
valign = 1
script = SubResource( 11 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -740.5
margin_top = 121.0
margin_right = 740.5
margin_bottom = 268.0
custom_constants/separation = 100
alignment = 1

[node name="user_input" type="LineEdit" parent="HBoxContainer"]
margin_left = 240.0
margin_right = 1240.0
margin_bottom = 147.0
rect_min_size = Vector2( 1000, 0 )
theme = SubResource( 16 )
custom_fonts/font = SubResource( 9 )
align = 1
placeholder_text = "Sample Answer"

[node name="submit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -201.0
margin_top = -228.0
margin_right = 201.0
margin_bottom = -92.0
rect_min_size = Vector2( 200, 0 )
theme = SubResource( 20 )

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="counter_labels" type="HBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -910.0
margin_top = 50.0
margin_right = -436.0
margin_bottom = 149.0
custom_constants/separation = 50

[node name="Label" type="Label" parent="counter_labels"]
margin_right = 342.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 10 )
text = "Question: "

[node name="question_number" type="Label" parent="counter_labels"]
margin_left = 392.0
margin_right = 433.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 10 )
text = "0"
align = 1
valign = 1

[node name="score_labels" type="HBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -910.0
margin_top = 150.0
margin_right = -436.0
margin_bottom = 249.0
custom_constants/separation = 50

[node name="Label" type="Label" parent="score_labels"]
margin_right = 223.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 10 )
text = "Score: "

[node name="score" type="Label" parent="score_labels"]
margin_left = 273.0
margin_right = 319.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 10 )
text = "--"
align = 1
valign = 1

[node name="timer_labels" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -172.5
margin_top = 138.0
margin_right = 172.5
margin_bottom = 237.0
custom_constants/separation = 50

[node name="Label" type="Label" parent="timer_labels"]
margin_right = 175.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 10 )
text = "Time:"

[node name="remaining_time" type="Label" parent="timer_labels"]
margin_left = 225.0
margin_right = 307.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 10 )
text = "20"

[node name="instruction" type="Button" parent="."]
margin_left = 1802.0
margin_top = 964.0
margin_right = 1902.0
margin_bottom = 1064.0
theme = ExtResource( 9 )

[node name="manager" parent="." instance=ExtResource( 16 )]

[connection signal="pressed" from="popup_layer/game_over/main_popup/GridContainer/next" to="." method="_on_next_pressed"]
[connection signal="hide" from="popup_layer/instructions" to="." method="_on_instructions_hide"]
[connection signal="pressed" from="popup_layer/perQuestion_popup/tap" to="." method="_on_tap_pressed"]
[connection signal="pressed" from="submit" to="." method="_on_submit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="instruction" to="." method="_on_instruction_pressed"]

[editable path="popup_layer/pause"]
[editable path="popup_layer/pause/CanvasLayer/settings"]
[editable path="popup_layer/game_over"]
[editable path="popup_layer/instructions"]
